--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <p>Where flowers are our inspiration to create <br> memories. Whatever the occasioin, our flowers will<br/> make it special cursus a sit amet mauris.</p>
           </div>
           <div>
-            <button class="btn btn-danger">login</button>
-            <button class="btn btn-danger">Sign up</button>
+           <a href="./PhpFiles/login.php"> <button class="btn btn-danger">login</button></a>
+            <a href="./PhpFiles/addUser.php"><button class="btn btn-danger">Sign up</button></a>
           </div>
         </div>
         <div class="img_container">
