--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <div class="container">
                   <div class="card">
                       <div class="personeImg">
-                          <img src="./images/persone.png" alt="persone photo">
+                          <img src="./images/omaima.jpg" alt="persone photo">
                       </div>
                       <div class="discription">
                          <h5>Persone Persone</h5>
@@ -143,7 +143,7 @@
                   </div>
                   <div class="card">
                       <div class="personeImg">
-                          <img src="./images/persone.png" alt="persone photo">
+                          <img src="./images/lolo.jpg" alt="persone photo">
                       </div>
                       <div class="discription">
                          <h5>Persone Persone</h5>
@@ -152,7 +152,7 @@
                   </div>
                   <div class="card">
                       <div class="personeImg">
-                          <img src="./images/persone.png" alt="persone photo">
+                          <img src="./images/saif.jpg" alt="persone photo">
                       </div>
                       <div class="discription">
                          <h5>Persone Persone</h5>
@@ -161,7 +161,16 @@
                   </div>
                   <div class="card">
                       <div class="personeImg">
-                          <img src="./images/persone.png" alt="persone photo">
+                          <img src="./images/tofla.jpg" alt="persone photo">
+                      </div>
+                      <div class="discription">
+                         <h5>Persone Persone</h5>
+                         <h6>JOB</h6>
+                      </div>
+                  </div>
+                  <div class="card">
+                      <div class="personeImg">
+                          <img src="./images/wzir.jpg" alt="persone photo">
                       </div>
                       <div class="discription">
                          <h5>Persone Persone</h5>
